Se corrige error de video

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div> 
       </div>
       <video autoplay="true" muted="true" loop="true">
-        <source src="/public/assets/public_video.webm">
+        <source src="./public/assets/public_video.webm">
       </video>
       <div class="mainZones video-zone">
         <div class="title-container">
