Se arregla alineacion del texto

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         </a>
       </div>
       <ul class="options-list">
-        <li><a href="#model-y">Vehículos</a></li>
-        <li><a href="#energia">Energía</a></li>
-        <li><a href="#">Carga</a></li>
-        <li><a href="#">Descubrir</a></li>
-        <li><a href="#tienda">Tienda</a></li>
+        <li><a class="option-menu-a" href="#model-y">Vehículos</a></li>
+        <li><a class="option-menu-a" href="#energia">Energía</a></li>
+        <li><a class="option-menu-a" href="#">Carga</a></li>
+        <li><a class="option-menu-a" href="#">Descubrir</a></li>
+        <li><a class="option-menu-a" href="#tienda">Tienda</a></li>
       </ul>
 
       <ul class="options-menu-list">
-        <li><a href="#"><i class="fa-solid fa-question"></i></a></li>
-        <li><a href="#"><i class="fa-solid fa-globe"></i></a></li>
-        <li><a href="#"><i class="fa-regular fa-circle-user"></i></a></li>
+        <li><a class="option-menu-a" href="#"><i class="fa-solid fa-question"></i></a></li>
+        <li><a class="option-menu-a" href="#"><i class="fa-solid fa-globe"></i></a></li>
+        <li><a class="option-menu-a" href="#"><i class="fa-regular fa-circle-user"></i></a></li>
       </ul>
 
       <div class="menu-cellphone">
