--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="https://cdn.rawgit.com/mfd/f3d96ec7f0e8f034cc22ea73b3797b59/raw/856f1dbb8d807aabceb80b6d4f94b464df461b3e/gotham.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tesla Recreation</title>
 </head>
@@ -30,7 +29,7 @@
       <ul class="options-menu-list">
         <li><a class="option-menu-a" href="#"><i class="fa-solid fa-question"></i></a></li>
         <li><a class="option-menu-a" href="#"><i class="fa-solid fa-globe"></i></a></li>
-        <li><a class="option-menu-a" href="#"><i class="fa-regular fa-circle-user"></i></a></li>
+        <li><a class="option-menu-a" href="/pages/login/login.html"><i class="fa-regular fa-circle-user"></i></a></li>
       </ul>
 
       <div class="menu-cellphone">
@@ -44,7 +43,7 @@
             <a href="#tienda">Tienda</a>
             <a href="#">Soporte</a>
             <a href="#"><i class="fa-solid fa-globe"></i> Idioma</a>
-            <a href="#"><i class="fa-regular fa-circle-user"></i> Cuenta</a>
+            <a href="/pages/login/login.html"><i class="fa-regular fa-circle-user"></i> Cuenta</a>
           </div>
         </div>
       </div>
