Se agregan barra lateral e idioma Ingles

--- a/public/pages/login/loginEn.html
+++ b/public/pages/login/loginEn.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-  <link rel="stylesheet" href="login.css">
+  <link rel="stylesheet" href="loginEn.css">
   <title>Tesla Recreation | Login</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
     <div class="lenguage-container">
       <button class="lenguage-button">
         <i class="fa-solid fa-globe"></i>
-        es-ES
+        en-US
       </button>
     </div>
   </header>
@@ -38,23 +38,23 @@
     <div class="login-container">
       <div class="login-form-container">
         <form class="login-form">
-          <h1 class="login-title">Iniciar sesión</h1>
+          <h1 class="login-title">Sign in</h1>
           <div class="login-input-container">
-            <label for="email" class="form-label">Correo electrónico <i class="fa-solid fa-circle-info"></i></label>
+            <label for="email" class="form-label">Email <i class="fa-solid fa-circle-info"></i></label>
             <input class="form-input" type="email" name="email" id="email">
           </div>
 
-          <button class="next-button" disabled>Siguiente</button>
+          <button class="next-button" disabled>Next</button>
 
-          <a href="#" class="problem-link">¿Tienes problemas para iniciar sesión?</a>
+          <a href="#" class="problem-link">Trouble Signing In?</a>
 
-          <span>------------------------ <b>O</b> ------------------------</span>
+          <span>------------------------ <b>Or</b> ------------------------</span>
 
-          <button class="create-account">Crear cuenta</button>
+          <button class="create-account">Create Account</button>
         </form>
       </div>
   </main>
 
-  <script type="module" src="login.js"></script>
+  <script type="module" src="loginEn.js"></script>
 </body>
 </html>
