--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <ul class="options-menu-list">
         <li><a class="option-menu-a" href="#"><i class="fa-solid fa-question"></i></a></li>
         <li><a class="option-menu-a" href="#"><i class="fa-solid fa-globe"></i></a></li>
-        <li><a class="option-menu-a" href="public/pages/login/login.html"><i class="fa-regular fa-circle-user"></i></a></li>
+        <li><a class="option-menu-a" href="#"><i class="fa-regular fa-circle-user"></i></a></li>
       </ul>
 
       <div class="menu-cellphone">
@@ -43,7 +43,7 @@
             <a href="#tienda">Tienda</a>
             <a href="#">Soporte</a>
             <a href="#"><i class="fa-solid fa-globe"></i> Idioma</a>
-            <a href="public/pages/login/login.html"><i class="fa-regular fa-circle-user"></i> Cuenta</a>
+            <a href="#"><i class="fa-regular fa-circle-user"></i> Cuenta</a>
           </div>
         </div>
       </div>
